--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    Moin
+    Ich bin richard hellwig aus ansbach
 
-    <h1>sevus</h1>
+    <script src="script.js"></script>
 </body>
 </html>
