--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Ich bin richard hellwig aus ansbach
+    servus
 
     <script src="script.js"></script>
 </body>
